[project]
name = "arxiv-researcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Sid Viswanath", email = "sidvee28@gmail.com"},
]
dependencies = ["arxiv>=2.1.3", "llama-index>=0.12.21", "python-dotenv>=1.0.1", "notebook>=7.3.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
